chore(api): done connection string

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EmployeeAppCon": "Data Source=localhost; Initial Catalog=EmployeeDB; Persist Security Info=True; User ID=sa; Password=My$ecurityPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
