--- a/UI/angular10/package.json
+++ b/UI/angular10/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "~10.1.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
